updated the resume hw to use semantic HTML
updated the resume hw to use semantic HTML

--- a/index.html
+++ b/index.html
@@ -1,127 +1,67 @@
+<!DOCTYPE html>
+
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Résumé</title>
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Resume</title>
 </head>
-
 <body>
-
-
-    <!-- Create your resume with HTML in a code editor of your choice
-
-        As a recruiter, I need to see a document with your skills and qualification
-        As stakeholder, It needs to have a <h1> tag, a <section> tag and a <footer> tag> -->
-    <div class="Header">
-        <h1>Gerald J Ringer, MSIDT</h1>
+  <header>
+    <div class="address">
+      <h3>Coto De Caza, CA 92679, Tel (585) 484-7095<h3>
     </div>
-    <section>
-        <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
+    <!--close address div  -->
+    <h1 class="mainHeader">Gerald J. Ringer</h1>
+  </header>
 
-        <div class="item">
-            <div class="meta">
-                <div class="upper-row">
-                    <h3 class="job-title">President</h3>
-                    <div class="time"> 2006 - Present</div>
-                </div>
-                <!--//upper-row-->
-                <div class="company">Focus Educational Services, Orange County California, NYC, NY, and Rochester, NY</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-                <p>Currently running career training for Front-end Developer, UX Desigh, and Digiital Marketing for community colleges and Focus Educational Services.These programs are running successfuly at Monreo Commuity College in Rochester, and will
-                    running in California in 2018.</p>
-                <p>Worked with Brandman Univesity, and Monroe Community College as a business developer and program manager. Developed and managed a complete telecom training program. Worked with Labor Unions and Major Corporations to fine tune training
-                    programs suited to their members and employees. Specialized in Fiber Optics Certifications for Telecom professionals.</p>
-            </div>
-            <!--//details-->
-        </div>
-        <div class="upper-row">
-            <h3 class="job-title">Lead Instructor</h3>
-            <div class="time">October, 1994, to March, 2006</div>
-        </div>
-        <!--//upper-row-->
-        <div class="company">Chapman University, Orange, CA</div>
-        </div>
-        <!--//meta-->
-        <div class="details">
-            <p>Managed and instructed the Microsoft Certified Sytem Engineer (MCSE) 2000 Program. Designed training program that motivated students to achieve their goals. Also taught the A+ and NetWork Plus Programs.Worked as a independent contractor providing
-                technical training. Some of the clients include Platt College, Newport Beach, CA, and D-Link, Irvine, CA. International Education Corporation (IEC), Irvine, Ca</p>
+  <main class=>
+    <section class="work-history">
+      <h2> Work Experience<h2>
+          <article>
+            <h4><b>Monroe Community College<b></h4>
+            <h4>Instructional Designer, Program Developer</h4>
+            <h4><i>July, 2016 to present<i></h4>
+            <p>
+              Senior Instructional Designer for five new Certificate programs including Front-end Developer, UX Design, Digital Marketing, Data Science, Business Analytics. Thess certificate programs consist several courses and span over a four to
+              six month period. They are designed to invigorate a current career, or to start a new career.
+            </p>
 
-        </div>
-        <!--//details-->
-        </div>
-        <!--//item-->
-
-        <div class="item">
-            <div class="meta">
-                <div class="upper-row">
-                    <h3 class="job-title">Account Management - Corporate Sales</h3>
-                    <div class="time">1989 to 1993</div>
-                </div>
-                <!--//upper-row-->
-                <div class="company">PC Systems Design, Irvine, California</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-                <p>Account Management of Corporate Sales Developed and managed multi-million dollar PC integration service for a Fortune 500 account. Managed account for over three years.</p>
-
-            </div>
-            <!--//details-->
-        </div>
+          </article>
+          <article>
+            <h4><b>Brandman University<b></h4>
+            <h4>Instructional Designer, Program Developer</h4>
+            <h4><i>April, 2006 to March, 2016<i></h4>
+            <p>
+              Worked with Brandman University as a Insructional Designer, business developer and program manager. Developed and managed a complete telecom training program. Worked with Labor Unions and Major Corporations to fine tune training
+              programs suited to their members and employees.
+            </p>
     </section>
-    <!--//end of work experience section-->
-    <!--//new section-->
-    <div class="education-container container-block">
-        <h2 class="container-block-title">Education</h2>
-        <div class="item">
-            <h4 class="degree">M.A. Master of Arts in Education. Instructional Design Technology (MSIDT). </h4>
-            <h5 class="meta">Cal-State University, Fullerton</h5>
-            <div class="time">2007</div>
-        </div>
-        <!--//item-->
-        <div class="item">
-            <h4 class="degree">B.S., Business Administration, Marketing </h4>
-            <h5 class="meta">Cal-State University, Fullerton</h5>
-            <div class="time">1991</div>
-        </div>
-        <!--//item-->
-    </div>
+    <section class="education">
+      <article>
+      </article>
     </section>
-    <!--//education-section container-->
-
-    <div class="languages-container container-block">
-        <h2 class="container-block-title">Languages</h2>
-        <ul class="list-unstyled interests-list">
-            <li>English <span class="lang-desc">(Native)</span></li>
-
-            <li>Portugues <span class="lang-desc">Brazilian</span></li>
+    <section class="extra">
+      <article>
+        <h3>Languages</h3>
+        <ul>
+          <li>English</li>
+          <li>Portuguese</li>
         </ul>
-    </div>
-    <!--//interests-->
-
-    <div>
-        <h2>Interests</h2>
-        <ul class="list-unstyled interests-list">
-            <li>Surfing</li>
-            <li>Guitar</li>
-            <li>Learning</li>
+      </article>
+        <h3>Certifications</h3>
+        <ul>
+          <li>UX Design, Monroe Community College</li>
+          <li>Digital Markeing, Udacity Nanodegree</li>
         </ul>
-    </div>
-    <!--//interests-->
-
-    </div>
-    <!--//sidebar-wrapper-->
-
+    <article>
     </section>
-
-    <footer>
-        <h3>Gerald J Ringer</h3>
-        <h3>geraldjringer@yahoo.com</h3>
-        </div>
+  </main>
+  <footer>
+      <h3>Gerald J Ringer, Coto De Caza, CA 92679, Tel (585) 484-7095<h3>
+  </footer>​
 </body>
-
+</div>  <!--end of container  -->
 </html>
